Initial bug fixing and modifications.
+ Added option to set browser icon add/dup/fail timeout.
+ Updated to JQuery v1.9.1.
+ Add file priorities in torrent download popup (credit to Florian Unglaub).
* Changed to manifest version 2.
* Clicking on .torrent link when download popup is disabled will not download the file, just send a link to transmission.
* Fix downloading .torrent file as blob (fixes issue with torrent download popup).
* Updated sendRequest/onRequest to sendMessage/onMessage (new API in Chrome ~v20+).
+* Probably a few other minor things.

--- a/source/css/downloadTorrent.css
+++ b/source/css/downloadTorrent.css
@@ -88,7 +88,7 @@ select, button {
 }
 
 #files th.name, #files td.name {
-	width: 80%;
+	width: 65%;
 	overflow: hidden;
 	white-space: nowrap;
 	border-left: 1px solid #d2cfcc;
@@ -100,6 +100,15 @@ select, button {
 }
 
 #files td.size {
+	border-left: 1px solid #bdbdbd;
+}
+
+#files th.priority {
+	width: 15%;
+	border-left: 1px solid #d2cfcc;
+}
+
+#files td.priority {
 	border-left: 1px solid #bdbdbd;
 }
 
@@ -117,4 +126,9 @@ select, button {
 .listChkBox {
 	width: 29px;
 	height: 29px;
+}
+
+.prioChkBox {
+	width: 10px;
+	height: 10px;
 }
