Update to v0.9.9 - various fixes
* Fixed popup menu (inline js error).
* Slight realignment of progress bars (were off by 1px).
* Slight alignment of progress bar buttons (occasionally could be off by one pixel).
* Swapped seeding and complete progress bar colours.
* Fixed seeding status code, pause button now shows for seeding torrents.
* Fixed html5 compliance in popup.html.
* Fixed updating display of torrent that changes state.

--- a/source/css/popup.css
+++ b/source/css/popup.css
@@ -200,6 +200,7 @@ input[type="text"] {
 	display: inline-block;
 	font-size: 9px;
 	color: #666;
+	min-height: 10pt;
 }
 
 .torrent_speeds {
@@ -224,7 +225,7 @@ input[type="text"] {
 
 .torrent_progress div {
 	position: relative;
-	top: -2px;
+	top: -1px;
 	left: -1px;
 	-webkit-transition: width 1.0s;
 	height: 10px;
@@ -247,19 +248,19 @@ input[type="text"] {
 
 .torrent_progress div.seeding {
 	border-width: 1px;
-	border-color: #269e30;
-	background-position: 0 -40px;
-}
-
-.torrent_progress div.complete {
-	border-width: 1px;
 	border-color: #29ad35;
 	background-position: 0 -10px;
 }
 
+.torrent_progress div.complete {
+	border-width: 1px;
+	border-color: #269e30;
+	background-position: 0 -40px;
+}
+
 .torrent_button {
 	position: absolute;
-	top: 30px;
+	top: 31px;
 	width: 14px;
 	height: 12px;
 	background: url(../images/buttons.png) no-repeat;
