Add support for adding new custom location from save popup

--- a/source/css/downloadMagnet.css
+++ b/source/css/downloadMagnet.css
@@ -35,6 +35,18 @@ select, button {
 	vertical-align: middle;
 }
 
+#new {
+	display: none;
+}
+
+#newLabelDirectoryRow {
+	display: flex;
+}
+
+#newDirectory {
+	flex-grow: 1;
+}
+
 #cancel {
 	float: right;
 	width: 85px;
